--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
 html,
 body {
@@ -29,4 +29,37 @@ a {
     color: white;
     background: black;
   }
+}
+
+.parent {
+  display: grid;
+  gap: 8px;
+  padding: 10px;
+  height:100%;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 4 / 4;
+}
+.div2 {
+  grid-area: 1 / 4 / 2 / 6;
+}
+.div3 {
+  grid-area: 2 / 4 / 3 / 6;
+}
+.div4 {
+  grid-area: 3 / 4 / 4 / 6;
+}
+.div5 {
+  grid-area: 4 / 1 / 5 / 6;
+  width: 100%;
+  height: fit-content;
+}
+.div6 {
+  grid-area: 5 / 1 / 6 / 4;
+  height: fit-content;
+}
+.div7 {
+  grid-area: 5 / 4 / 6 / 6;
+  height: 45%;
 }
