add ui textarea

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,8 +17,10 @@ a {
   text-decoration: none;
 }
 
+
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,4 +31,13 @@ a {
     color: white;
     background: black;
   }
+}
+
+.tx{
+  resize: none;
+  overflow: hidden;
+}
+
+.tx::-webkit-scrollbar { 
+  display: none; 
 }
