--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,37 @@ a {
   }
 }
 
+@keyframes heroAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  60% {
+    opacity: 0.5;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 
+.motion {
+  opacity: 0;
+  animation: heroAnimation 1s 0.2s forwards;
+}
+
+.motion:nth-child(1) {
+  animation-delay: 0.3s;
+}
+
+.motion:nth-child(2) {
+  animation-delay: 0.6s;
+}
+
+.motion:nth-child(3) {
+  animation-delay: 0.9s;
+}
 
 .tx {
   resize: none;
